--- a/Mija Reader/AdditionalControls/MangaDetailsViewer.xaml
+++ b/Mija Reader/AdditionalControls/MangaDetailsViewer.xaml
@@ -5,7 +5,7 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:Mija_Reader.AdditionalControls"
         mc:Ignorable="d"
-        Title="MangaDetailsViewer" Height="300" Width="400">
+        Title="" Height="300" Width="400">
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition></ColumnDefinition>
